--- a/frontend/src/pages/editorPage/editorPage.module.css
+++ b/frontend/src/pages/editorPage/editorPage.module.css
@@ -16,7 +16,7 @@
     margin-bottom: 5px;
 }
 
-#mainDiv h3 {
+#mainDiv > h3 {
     font-size: 19pt;
     color: white;
     margin-top: 30px;
